Fix title bar text alignment

--- a/css/win95.css
+++ b/css/win95.css
@@ -416,6 +416,7 @@ li a {
 	margin-left: 3px;
 	width: 16px;
 	height: auto;
+	float: left;
 }
 
 .windowTitleBar span {
@@ -423,10 +424,10 @@ li a {
 	font-family: 'WINDialog';
 	font-size: 17px;
 	position: relative;
-	bottom: 4px;
+	bottom: 0px;
 	left: 4px;
 	width: 60%;
-	display: inline-block;
+	float: left;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
